--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,12 @@
 {
+  
   "name": "express-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "index.js",
+    
     "dev": "nodemon index.js"
   },
   "repository": {
@@ -25,6 +27,7 @@
     "ejs": "^3.1.9",
     "env": "^0.0.2",
     "express": "^4.18.2",
+    "gh-pages": "^6.0.0",
     "helmet": "^4.6.0",
     "joi": "^17.4.1",
     "mongodb": "^6.1.0",
