--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,14 +1,10 @@
 {
-    "version": 2,
-    "routes": [
-      { "src": "/imageUploads/(.*)", "dest": "/imageUploads/$1" },
-      { "src": "/products/(.*)", "dest": "/products/$1" },
-      { "src": "/user/(.*)", "dest": "/user/$1" },
-      
-      { "src": "/(.*)", "dest": "/" }  
-    ],
-    "builds": [
-      { "src": "*.js", "use": "@vercel/node" }
-    ]
-  }
-  
+  "version": 2,
+  "name": "eikon",
+  "builds": [
+     { "src": "server.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+     { "src": "/(.*)", "dest": "/server.js" }
+  ]
+}
