--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "name": "eikon",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://eikon-api.onrender.com"
+  "proxy": "https://eikon-api.onrender.com",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.10.0",
     "@testing-library/jest-dom": "^5.17.0",
